--- a/scripts/install
+++ b/scripts/install
@@ -79,7 +79,7 @@ ynh_print_info "Installing dependencies..."
 ###		- As well as the section "REINSTALL DEPENDENCIES" in the restore script
 ###		- And the section "UPGRADE DEPENDENCIES" in the upgrade script
 
-ynh_install_app_dependencies jellyfin
+ynh_install_app_dependencies libowfat-dev
 
 #=================================================
 # FIND AND OPEN A PORT
