--- a/scripts/install
+++ b/scripts/install
@@ -157,6 +157,7 @@ ynh_system_user_create $app
 
 # Set permissions to app files
 chown -R admin:1007 $final_path
+chmod +x $final_path/opentracker
 
 
 #=================================================
@@ -170,4 +171,5 @@ if [ $is_public -eq 1 ]; then
 fi
 
 # Reload services
+systemctl start $app
 systemctl reload nginx
