--- a/scripts/install
+++ b/scripts/install
@@ -80,7 +80,7 @@ ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 git clone git://erdgeist.org/opentracker "$final_path" --quiet
 
 pushd "$final_path" || ynh_die
-	make
+	ynh_exec_warn_less make
  popd || ynh_die
 
 #=================================================
@@ -123,7 +123,7 @@ chmod +x $final_path/opentracker
 ynh_script_progression --message="Starting a systemd service..." --weight=2
 
 # Start a systemd service
-ynh_systemd_action --service_name=$app --action="start" --log_path="systemd" --needs_exposed_ports "$port"
+ynh_systemd_action --service_name=$app --action="start" --log_path="systemd" #--needs_exposed_ports "$port"
 
 #=================================================
 # SETUP SSOWAT
