--- a/scripts/install
+++ b/scripts/install
@@ -25,9 +25,6 @@ ynh_abort_if_errors
 
 # Retrieve arguments
 domain=$YNH_APP_ARG_DOMAIN
-path_url=$YNH_APP_ARG_PATH
-is_public=$YNH_APP_ARG_IS_PUBLIC
-
 app=$YNH_APP_INSTANCE_NAME
 
 #=================================================
@@ -35,11 +32,8 @@ app=$YNH_APP_INSTANCE_NAME
 #=================================================
 ynh_script_progression --message="Validating installation parameters..." --weight=1
 
-final_path=/opt/$app
+final_path=/opt/yunohost/$app
 test ! -e "$final_path" || ynh_die "This path already contains a folder"
-
-# Register (book) web path
-ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 
 #=================================================
 # STORE SETTINGS FROM MANIFEST
@@ -47,13 +41,11 @@ ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 ynh_script_progression --message="Storing installation settings..." --weight=1
 
 ynh_app_setting_set --app=$app --key=domain --value=$domain
-ynh_app_setting_set --app=$app --key=path --value=$path_url
-ynh_app_setting_set --app=$app --key=is_public --value=$is_public
 
 #=================================================
 # FIND AND OPEN A PORT
 #=================================================
-ynh_script_progression --message="Configuring firewall..." --weight=1
+ynh_script_progression --message="Finding an available port..." --weight=1
 
 # Find a free port
 port=$(ynh_find_port --port=6969)
@@ -75,20 +67,11 @@ ynh_install_app_dependencies $pkg_dependencies
 ynh_script_progression --message="Installing OpenTracker..." --weight=5
 
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
-
 git clone git://erdgeist.org/opentracker "$final_path" --quiet
 
 pushd "$final_path" || ynh_die
 	ynh_exec_warn_less make
  popd || ynh_die
-
-#=================================================
-# NGINX CONFIGURATION
-#=================================================
-ynh_script_progression --message="Configuring NGINX web server..." --weight=10
-
-# Create a dedicated NGINX config
-ynh_add_nginx_config
 
 #=================================================
 # CREATE DEDICATED USER
@@ -114,14 +97,14 @@ ynh_add_systemd_config
 
 # Set permissions to app files
 chown -R $app: $final_path
-chmod +x $final_path/opentracker
+chmod +x $final_path/$app
 
 #=================================================
 # INTEGRATE SERVICE IN YUNOHOST
 #=================================================
 ynh_script_progression --message="Integrating service in YunoHost..." --weight=1
 
-yunohost service add $app --description="A short description of the app" --log="/var/log/$app/$app.log"
+yunohost service add $app --description="Bittorrent tracker" --log="/var/log/$app/$app.log" --needs_exposed_ports "$port"
 
 #=================================================
 # START SYSTEMD SERVICE
@@ -129,25 +112,7 @@ yunohost service add $app --description="A short description of the app" --log="
 ynh_script_progression --message="Starting a systemd service..." --weight=2
 
 # Start a systemd service
-ynh_systemd_action --service_name=$app --action="start" --log_path="systemd" #--needs_exposed_ports "$port"
-
-#=================================================
-# SETUP SSOWAT
-#=================================================
-ynh_script_progression --message="Configuring SSOwat..." --weight=1
-
-# Make app public if necessary or protect it
-if [ $is_public -eq 1 ]
-then
-	ynh_permission_update --permission "main" --add "visitors"
-fi
-
-#=================================================
-# RELOAD NGINX
-#=================================================
-ynh_script_progression --message="Reloading NGINX web server..." --weight=2
-
-ynh_systemd_action --service_name=nginx --action=reload
+ynh_systemd_action --service_name=$app --action=start --log_path="systemd"
 
 #=================================================
 # END OF SCRIPT
