--- a/scripts/install
+++ b/scripts/install
@@ -62,6 +62,14 @@ ynh_script_progression --message="Installing dependencies..." --weight=2
 ynh_install_app_dependencies $pkg_dependencies
 
 #=================================================
+# CREATE DEDICATED USER
+#=================================================
+ynh_script_progression --message="Configuring system user..." --weight=1
+
+# Create a system user
+ynh_system_user_create --username=$app --home_dir="$final_path"
+
+#=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
 ynh_script_progression --message="Installing OpenTracker..." --weight=5
@@ -73,14 +81,6 @@ cp ../conf/opentracker.conf.sample $final_path/opentracker.conf
 pushd $final_path
 	ynh_exec_warn_less make
  popd
-
-#=================================================
-# CREATE DEDICATED USER
-#=================================================
-ynh_script_progression --message="Configuring system user..." --weight=1
-
-# Create a system user
-ynh_system_user_create --username=$app
 
 #=================================================
 # SETUP SYSTEMD
@@ -105,7 +105,7 @@ chmod +x $final_path/$app
 #=================================================
 ynh_script_progression --message="Integrating service in YunoHost..." --weight=1
 
-yunohost service add $app --description="Bittorrent tracker" --log=systemd --needs_exposed_ports $port
+yunohost service add $app --description="Bittorrent tracker" --log="systemd" --needs_exposed_ports="$port"
 
 #=================================================
 # START SYSTEMD SERVICE
