--- a/scripts/install
+++ b/scripts/install
@@ -13,43 +13,43 @@ source /usr/share/yunohost/helpers
 # MANAGE SCRIPT FAILURE
 #=================================================
 
-ynh_clean_setup () {
+#REMOVEME? ynh_clean_setup () {
 	ynh_clean_check_starting
 }
 # Exit if an error occurs during the execution of the script
-ynh_abort_if_errors
+#REMOVEME? ynh_abort_if_errors
 
 #=================================================
 # RETRIEVE ARGUMENTS FROM THE MANIFEST
 #=================================================
 
 # Retrieve arguments
-#domain=$YNH_APP_ARG_DOMAIN
-app=$YNH_APP_INSTANCE_NAME
+#REMOVEME? #domain=$YNH_APP_ARG_DOMAIN
+#REMOVEME? app=$YNH_APP_INSTANCE_NAME
 
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
-ynh_script_progression --message="Validating installation parameters..." --weight=1
+#REMOVEME? ynh_script_progression --message="Validating installation parameters..." --weight=1
 
-final_path=/opt/yunohost/$app
-test ! -e "$final_path" || ynh_die "This path already contains a folder"
+#REMOVEME? install_dir=/opt/yunohost/$app
+#REMOVEME? test ! -e "$install_dir" || ynh_die "This path already contains a folder"
 
 #=================================================
 # STORE SETTINGS FROM MANIFEST
 #=================================================
-ynh_script_progression --message="Storing installation settings..." --weight=1
+#REMOVEME? ynh_script_progression --message="Storing installation settings..." --weight=1
 
-#ynh_app_setting_set --app=$app --key=domain --value=$domain
+#REMOVEME? #ynh_app_setting_set --app=$app --key=domain --value=$domain
 
 #=================================================
 # FIND AND OPEN A PORT
 #=================================================
-ynh_script_progression --message="Finding an available port..." --weight=1
+#REMOVEME? ynh_script_progression --message="Finding an available port..." --weight=1
 
 # Find a free port
-port=$(ynh_find_port --port=6969)
-ynh_app_setting_set --app=$app --key=port --value=$port
+#REMOVEME? port=$(ynh_find_port --port=6969)
+#REMOVEME? ynh_app_setting_set --app=$app --key=port --value=$port
 
 # Open the port
 ynh_exec_warn_less yunohost firewall allow Both $port
@@ -57,28 +57,28 @@ ynh_exec_warn_less yunohost firewall allow Both $port
 #=================================================
 # INSTALL DEPENDENCIES
 #=================================================
-ynh_script_progression --message="Installing dependencies..." --weight=2
+#REMOVEME? ynh_script_progression --message="Installing dependencies..." --weight=2
 
-ynh_install_app_dependencies $pkg_dependencies
+#REMOVEME? ynh_install_app_dependencies $pkg_dependencies
 
 #=================================================
 # CREATE DEDICATED USER
 #=================================================
-ynh_script_progression --message="Configuring system user..." --weight=1
+#REMOVEME? ynh_script_progression --message="Configuring system user..." --weight=1
 
 # Create a system user
-ynh_system_user_create --username=$app --home_dir="$final_path"
+#REMOVEME? ynh_system_user_create --username=$app --home_dir="$install_dir"
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
 ynh_script_progression --message="Installing OpenTracker..." --weight=5
 
-ynh_app_setting_set --app=$app --key=final_path --value=$final_path
-git clone git://erdgeist.org/opentracker "$final_path" --quiet
-cp ../conf/Makefile $final_path/Makefile
-cp ../conf/opentracker.conf.sample $final_path/opentracker.conf
-pushd $final_path
+#REMOVEME? ynh_app_setting_set --app=$app --key=install_dir --value=$install_dir
+git clone git://erdgeist.org/opentracker "$install_dir" --quiet
+cp ../conf/Makefile $install_dir/Makefile
+cp ../conf/opentracker.conf.sample $install_dir/opentracker.conf
+pushd $install_dir
 	ynh_exec_warn_less make
  popd
 
@@ -97,8 +97,8 @@ ynh_add_systemd_config
 #=================================================
 
 # Set permissions to app files
-chown -R $app: $final_path
-chmod +x $final_path/$app
+chown -R $app: $install_dir
+chmod +x $install_dir/$app
 
 #=================================================
 # INTEGRATE SERVICE IN YUNOHOST
