--- a/scripts/install
+++ b/scripts/install
@@ -15,11 +15,17 @@ source /usr/share/yunohost/helpers
 ynh_script_progression --message="Installing OpenTracker..." --weight=5
 
 git clone git://erdgeist.org/opentracker "$install_dir" --quiet
-cp ../conf/Makefile $install_dir/Makefile
-cp ../conf/opentracker.conf.sample $install_dir/opentracker.conf
+
+ynh_add_config --template="Makefile" --destination="$install_dir/Makefile"
+ynh_add_config --template="opentracker.conf.sample" --destination="$install_dir/opentracker.conf"
+
 pushd $install_dir
 	ynh_exec_warn_less make
- popd
+popd
+
+# Set permissions to app files
+chown -R $app: $install_dir
+chmod +x $install_dir/$app
 
 #=================================================
 # SETUP SYSTEMD
@@ -28,10 +34,6 @@ ynh_script_progression --message="Configuring a systemd service..." --weight=2
 
 # Create a dedicated systemd config
 ynh_add_systemd_config
-
-# Set permissions to app files
-chown -R $app: $install_dir
-chmod +x $install_dir/$app
 
 #=================================================
 # INTEGRATE SERVICE IN YUNOHOST
