--- a/scripts/install
+++ b/scripts/install
@@ -1,52 +1,46 @@
 #!/bin/bash
 
-#=================================================
-# GENERIC START
-#=================================================
-# IMPORT GENERIC HELPERS
-#=================================================
-
 source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
-ynh_script_progression --message="Installing OpenTracker..." --weight=5
+ynh_script_progression "Installing OpenTracker..."
 
 git clone git://erdgeist.org/opentracker "$install_dir" --quiet
 
-ynh_add_config --template="Makefile" --destination="$install_dir/Makefile"
-ynh_add_config --template="opentracker.conf.sample" --destination="$install_dir/opentracker.conf"
+ynh_config_add --template="Makefile" --destination="$install_dir/Makefile"
+ynh_config_add --template="opentracker.conf.sample" --destination="$install_dir/opentracker.conf"
 
 pushd $install_dir
-	ynh_exec_warn_less make
+	ynh_hide_warnings make
 popd
 
 # Set permissions to app files
-chown -R $app: $install_dir
+#REMOVEME? Assuming the install dir is setup using ynh_setup_source, the proper chmod/chowns are now already applied and it shouldn't be necessary to tweak perms | chown -R $app: $install_dir
 chmod +x $install_dir/$app
 
 #=================================================
 # SETUP SYSTEMD
 #=================================================
-ynh_script_progression --message="Configuring a systemd service..." --weight=2
+ynh_script_progression "Configuring $app's systemd service..."
 
 # Create a dedicated systemd config
-ynh_add_systemd_config
+ynh_config_add_systemd
 
 #=================================================
 # INTEGRATE SERVICE IN YUNOHOST
 #=================================================
-ynh_script_progression --message="Integrating service in YunoHost..." --weight=1
+ynh_script_progression "Integrating service in YunoHost..."
 
 yunohost service add $app --description="Bittorrent tracker" --log="systemd" --needs_exposed_ports="$port"
 
 # Start a systemd service
-ynh_systemd_action --service_name=$app --action=start --log_path="systemd"
+ynh_systemctl --service=$app --action=start --log_path="systemd"
 
 #=================================================
 # END OF SCRIPT
 #=================================================
 
-ynh_script_progression --message="Installation of OpenTracker completed" --last
+ynh_script_progression "Installation of OpenTracker completed"
